Fix post categories separator alignment

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -200,7 +200,7 @@ strong {
 
 .explore__devider {
     font-size: 18px;
-    letter-spacing: 8.18px;
+    @include letter-spaced(1em);
 }
 
 .explore__label, .license p {
